--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://RajeshNiraj.github.io/robofriends",
+  "homepage": "https://RajeshNiraj.github.io/robofriend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
